tests/golden/frontend/valid/basic_proc.vit
proc add(a: int, b: int) -> int {
  give a + b
}

entry main at core/app {
  let v: int = add(2, 3)
  return v
}
