tests/golden/frontend/invalid/resolve_unknown_type.vit
proc main() -> MissingType {
  return 1
}
